# mini2

./: .gitignore  CLASS_DEMO_SCRIPT.md  CMakeLists.txt  CONCEPTUAL_DEEP_DIVE.md  DEMO_GUIDE.md  DEMO_GUIDE_WINDOWS.md  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  main.tex  mini2_implementation_plan.md  slide_prompt.md
config/tree/: A.conf  B.conf  C.conf  D.conf  E.conf  F.conf  G.conf  H.conf  I.conf
config/tree-lan/: A.conf  B.conf  C.conf  D.conf  E.conf  F.conf  G.conf  H.conf  I.conf
cpp/include/config/: ConfigManager.hpp
cpp/include/grpc/: ClientPool.hpp  Server.hpp  ServiceImpl.hpp
cpp/include/model/: CSVParser.hpp  ServiceRequest.hpp
cpp/include/query/: DataStore.hpp  IndexSet.hpp  LocalQueryEngine.hpp
cpp/include/scheduler/: Scheduler.hpp  WorkerPool.hpp
cpp/src/: main_client.cpp  main_server.cpp
cpp/src/config/: ConfigManager.cpp
cpp/src/grpc/: ClientPool.cpp  Server.cpp  ServiceImpl.cpp
cpp/src/model/: CSVParser.cpp  ServiceRequest.cpp
cpp/src/query/: DataStore.cpp  IndexSet.cpp  LocalQueryEngine.cpp
cpp/src/scheduler/: Scheduler.cpp  WorkerPool.cpp
data/partitions-small/: A.csv  B.csv  C.csv  D.csv  E.csv  F.csv  G.csv  H.csv  I.csv
experiments/adaptive/: adaptive.txt  fixed.txt
experiments/chunk_size/: results.csv
experiments/fairness/: greedy.txt  round_robin.txt
experiments/linear_vs_indexed/: results.csv  results_v2.csv
experiments/local_vs_distributed/: results.csv
proto/: mini2.proto
python/: adaptive_test.py  cancel_test.py  client.py  config_loader.py  datastore.py  experiment_runner.py  fairness_test.py  plot_experiments.py  plot_slide_extras.py  server.py
scripts/: build.sh  check_deps.sh  gen_python_stubs.sh  kill_all.sh  launch_all.sh  make_small_partitions.sh  partition_data.py  run_experiments.sh  run_linear_vs_indexed_v2.sh  test_adaptive_chunking.sh  test_cache.sh  test_many_clients.sh  test_partial.sh
